# fconvert

./: README.md  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/fconv/: fconvert.py  utils.py
src/fconvert.egg-info/: PKG-INFO  SOURCES.txt
