[project]
name = "fconvert"
version = "0.0.1"
authors = [
  { name="Alberto Mittone", email="alberto.mittone@gmail.com" },
]
description = "Small file converter/binner"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[dependencies]
fabio = "2022.12.1"


[project.urls]
"Homepage" = "https://github.com/mittoalb/fconvert"
"Bug Tracker" = "https://github.com/mittoalb/fconvert/issues"
